[FIXES #24506227] removed white space from header

--- a/public/stylesheets/heypal.less
+++ b/public/stylesheets/heypal.less
@@ -157,8 +157,8 @@ body > header{
   z-index: 999;
 
   > .container {
-    margin-top:10px;
-    height: 82px;
+    margin-top:5px;
+    height: 65px;
   }
     
 }
@@ -2668,15 +2668,15 @@ pre.desc {
 
 .header .user_box,
 .header .preference-wrapper{
-  padding-top: 10px;
+  padding-top: 0;
 }
 
 .header .user_box{
   float: right;
-  margin-top: 20px;
+  margin-top: 10px;
 
   &.logged-in{
-    margin-top: 3px;
+    margin-top: 0;
     
     .user_name{
       float: left;
@@ -2722,7 +2722,7 @@ pre.desc {
 /*      background: #f0f0f0;*/
 /*      border: 1px solid #cfcfcf;*/
       display: block;
-      padding: 10px 10px 10px 33px;
+      padding: 0 10px 0 33px;
       background: transparent url(../images/blue-arrow-down.png) no-repeat 85px center;      
       color: #333;
       width: 60px;
